# lang

./: .gitignore  README
implementation/: Cargo.toml  flake.nix  graph.dot  intellij.sh  patch-intellij-rust-native-helper.impl.sh  patch-intellij-rust-native-helper.sh
implementation/proptest-regressions/: read.txt
implementation/proptest-regressions/allocation/allocators/: system.txt
implementation/src/: capacity.rs  continuation.rs  delimited_term.rs  delimiter.rs  env.rs  graph.rs  main.rs  parse.rs  read.rs  rule.rs  scope.rs  scope_set.rs  scoped_term.rs  singular_unscoped_term.rs  storage.rs  subterm_index.rs  symbol.rs  symbol_interner.rs  symbol_storage.rs  symbol_storage_buffer.rs  term.rs  term_graph.rs  term_match.rs  unscoped_term.rs
implementation/src/alloc2/: allocator_refcounted_blocks.rs  allocator_safebox.rs  allocator_system.rs  blk.rs  mod.rs  traits.rs
implementation/src/alloc2/allocators/: system.rs
implementation/src/allocation/: alignment.rs  alloc_box.rs  alloc_buffering.rs  alloc_simple.rs  alloc_stack.rs  block.rs  blocks.rs  capacity.rs  key.rs  memory.rs  mod.rs  symbol_alloc.rs  traits.rs  traits_alloc.rs  traits_block.rs
implementation/src/allocation/allocators/: affixed.rs  affixer.rs  allocator.rs  deallocator.rs  mod.rs  system.rs  zeroing.rs
implementation/src/allocation/blocks/: affixed.rs  aligned.rs  block.rs  block_dynamic.rs  block_static.rs  blueprinted.rs  contains.rs  contains_ref.rs  copy_as.rs  initialized.rs  map_dynamic_block.rs  mod.rs  slice.rs  split_at.rs  (+1 more)
src/rust/composeable-storage2/: Cargo.toml
(+119 files in other folders)
