[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
bitvec = "1.0.1"
nom = "7.1.3"
num-bigint = "0.4.4"
num-rational = "0.4.1"
petgraph = "0.6.4"
proptest = "1.3.1"
sexp = "1.1.4"
slotmap = "1.0.6"
typed-arena = "2.0.2"
typenum = "1.17.0"
unicode-segmentation = "1.10.1"
