[package]
name = "composeable-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies.rustix]
version = "0.38.24"
features = [ "mm", "param" ]

[dependencies]
num-traits = "0.2.17"

# [target.'cfg(windows)'.dependencies.winapi]
# version = "0.3.9"
# features = [ "sysinfoapi" ]